Bug 491635 - Despite moving a file/folder on the desktop, the file/folder often jumps back to its prior position automatically
Summary: Despite moving a file/folder on the desktop, the file/folder often jumps back...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 6.1.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 489754 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-08-12 17:16 UTC by kimimaru
Modified: 2024-09-13 08:55 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments
A video of the bug in action. Notice how the file moves back to its prior position without any input. (834.31 KB, video/x-matroska)
2024-08-12 17:16 UTC, kimimaru
Details
webm version of the above video so it can be previewed in the browser. (151.12 KB, video/webm)
2024-08-12 17:18 UTC, kimimaru
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kimimaru 2024-08-12 17:16:21 UTC
Created attachment 172552 [details]
A video of the bug in action. Notice how the file moves back to its prior position without any input.

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY
When moving a file on the desktop, more often than not it jumps back to the position you moved it from. This makes it very frustrating to organize your desktop when icons are jumping around instead of simply staying where you place them.

STEPS TO REPRODUCE
1. Have a file or folder on the desktop.
2. Drag the file or folder to a different spot on the desktop grid.
3. Wait for about a second or two maximum.

OBSERVED RESULT
Very often, the file/folder will move back to where you placed it. When exactly it moves, or whether it moves at all, is random from what I can find.

For example, say the file/folder was in Column 1 Row 1, and you move it to Column 2 Row 1. It'll jump back to Column 1 Row 1 when the bug triggers.

EXPECTED RESULT
The file/folder stays in the spot you placed it and doesn't move back.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: EndeavourOS
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2

ADDITIONAL INFORMATION
Linux Kernel: 6.10.4 (64-bit)
GPU: NVIDIA GeForce RTX 2060 running Nvidia-open-dkms 555.58.02

Desktop setting arrangement is "Top to Bottom" and "Align left", and sorting is "Manual"
Comment 1 kimimaru 2024-08-12 17:18:28 UTC
Created attachment 172553 [details]
webm version of the above video so it can be previewed in the browser.

I added the video as a different format for direct preview in the browser.
Comment 2 kimimaru 2024-08-12 17:20:41 UTC
Also, I'm running the Plasma Wayland session.
Comment 3 Nate Graham 2024-08-12 17:57:43 UTC
I have started being able to reproduce this recently. I haven't yet found the pattern, though.
Comment 4 Nate Graham 2024-08-13 18:14:49 UTC
I still haven't found a 100% reproducible case, but looking through recent git commits, I found https://invent.kde.org/plasma/plasma-desktop/-/commit/4da2346e42302349422cf7c45e64e838fb4d630f which looks suspicious and the timing roughly lines up with when I recall this beginning to happen.

David, does this look like it might be related?
Comment 5 TraceyC 2024-08-13 19:02:43 UTC
I am able to reliably trigger this behavior

On one display I have 8 icons in a row on the top
The first / leftmost one is a shortcut to Downloads
I moved it 2 rows down and after the last icon up top
When I try to drag and drop it back in the upper left corner, it snaps back as soon as I click on the desktop
Or... it does move back but then when I drag and drop it elsewhere, it snaps back to the top left corner as soon as I release the mouse

While it doesn't happen with every move, it does happen with most
Comment 6 Nate Graham 2024-08-16 14:58:18 UTC
I can reproduce that too!
Comment 7 Bug Janitor Service 2024-08-28 13:44:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2481
Comment 8 Nate Graham 2024-08-30 04:14:14 UTC
Git commit 80bbe282b227fb4c4ab8ccaed3d06a1b6d64904e by Nate Graham, on behalf of David Edmundson.
Committed on 30/08/2024 at 03:51.
Pushed by ngraham into branch 'master'.

Folderview: Avoid two way sync of positions

Positions are stored in the class Positioner. Items on screen follow this
property. When it changes a timer is started and we sync to the configuration
file.

There was existing code to also handle the configuration file changing and
re-sync back to Positioner in a circular trip. Due to the timer this isn't
always in sync if multiple moves are performed quickly and data is lost.

There is no need to update our current state on this configuration changing,
it's not something a user can manipulate externally. It seems it was added by
accident. Positioner is now the one source of truth and the configuration file
is only used for the initial load or resolution changes.

M  +0    -4    containments/desktop/package/contents/ui/FolderViewLayer.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/80bbe282b227fb4c4ab8ccaed3d06a1b6d64904e
Comment 9 Nate Graham 2024-09-13 08:55:44 UTC
*** Bug 489754 has been marked as a duplicate of this bug. ***