Folderview: Avoid two way sync of positions

Positions are stored in the class Positioner. Items on screen follow this
property. When it changes a timer is started and we sync to the configuration
file.

There was existing code to also handle the configuration file changing and
re-sync back to Positioner in a circular trip. Due to the timer this isn't
always in sync if multiple moves are performed quickly and data is lost.

There is no need to update our current state on this configuration changing,
it's not something a user can manipulate externally. It seems it was added by
accident. Positioner is now the one source of truth and the configuration file
is only used for the initial load or resolution changes.

BUG: 491635